--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "hueman"]
-	path = hueman
-	url = ./themes/hueman
+[submodule "themes/hueman"]
+	path = themes/hueman
+	url = https://github.com/ppoffice/hexo-theme-hueman
